# python_power_observer_server

./: TEST.db  pyproject.toml
python_sql_server/: __main__.py  train_sql.py
